create ApplicationErrorHandler and CourseNotFoundException
