# src/main/java/com/example/demo/controller/CourseController.java
@@ -7,6 +7,7 @@ import com.example.demo.entity.Course;
 import com.example.demo.mapper.CourseMapper;
 import com.example.demo.service.CourseService;
 import java.util.List;
+import java.util.UUID;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.RestController;
@@ -18,12 +19,24 @@ public class CourseController implements CoursesApi {
   public CourseController(CourseService courseService) {this.courseService = courseService;}
 
   @Override
+  public ResponseEntity<Void> deleteCourseById(String id) {
+    courseService.delete(UUID.fromString(id));
+    return new ResponseEntity<>(HttpStatus.NO_CONTENT);
+  }
+
+  @Override
   public ResponseEntity<CoursesApiDto> findAllCourses(String limit) {
     List<Course> content = courseService.findAll(0, Integer.parseInt(limit)).getContent();
     List<CourseApiDto> list = content.stream().map(course -> CourseMapper.INSTANCE.toDto(course)).toList();
     CoursesApiDto coursesApiDto = new CoursesApiDto();
     coursesApiDto.setCourses(list);
     return new ResponseEntity<>(coursesApiDto, HttpStatus.OK);
+  }
+
+  @Override
+  public ResponseEntity<CourseApiDto> findCourseByTitle(String title) {
+    Course byTitle = courseService.findByTitle(title);
+    return new ResponseEntity<>(CourseMapper.INSTANCE.toDto(byTitle), HttpStatus.OK);
   }
 
   @Override
