# src/main/java/com/example/demo/dto/CustomError.java
@@ -1,0 +1,13 @@
+package com.example.demo.dto;
+
+import lombok.Builder;
+import lombok.Getter;
+import lombok.Setter;
+
+@Builder
+@Getter
+@Setter
+public class CustomError {
+  int status;
+  String message;
+}
